--- a/test/unit_test.vcxproj.filters
+++ b/test/unit_test.vcxproj.filters
@@ -53,7 +53,7 @@
     <ClInclude Include="..\include\mysql\sql.hpp">
       <Filter>include\mysql</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\mysql\sql_transaction.hpp">
+    <ClInclude Include="..\include\mysql\transaction.hpp">
       <Filter>include\mysql</Filter>
     </ClInclude>
     <ClInclude Include="..\include\mysql\string_literal.hpp">
